--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.google.firebase:firebase-firestore:11.6.0'
+    implementation 'com.google.android.gms:play-services-location:11.6.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.firebase:firebase-storage:11.6.0'
+
 }
