--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".SaveLocation"></activity>
+        <activity android:name=".Profile" />
         <activity android:name=".NearBY" />
         <activity android:name=".TrackOn" />
         <activity android:name=".DistanceTwoPlace" />
