--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Sylhet"></activity>
+        <activity android:name=".TouristPlace"></activity>
+        <activity android:name=".Sylhet" />
         <activity android:name=".Rangpur" />
         <activity android:name=".Rajshahi" />
         <activity android:name=".Khulna" />
