--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TouristPlace"></activity>
+        <activity android:name=".BandarbanPolice"></activity>
+        <activity android:name=".ChittagongRange" />
+        <activity android:name=".TouristPlace" />
         <activity android:name=".Sylhet" />
         <activity android:name=".Rangpur" />
         <activity android:name=".Rajshahi" />
